--- a/spring-boot-activemq/src/main/resources/application.properties
+++ b/spring-boot-activemq/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 server.port = 8080
 
-#spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.broker-url=vm://embedded?broker.persistent=false,useShutdownHook=false
-spring.activemq.in-memory=true
-spring.activemq.in
+spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.packages.trust-all=true
