--- a/spring-boot-elastic-search/src/main/resources/application.properties
+++ b/spring-boot-elastic-search/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 server.port = 8080
 
+spring.profiles.active=dev
+
 elasticsearch.clustername = td-cluster
 #Open ${ELASTICSEARCH_HOME}\config\elasticsearch.yml and add the following configuration
 #cluster.name: td-cluster
 
 elasticsearch.host = localhost
 elasticsearch.port = 9300
-
-#
-# Home directory of the embedded Elasticsearch instance. Default to the
-# current working directory.
-#
-spring.data.elasticsearch.properties.path.home=target/elastic
-spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
