--- a/spring-boot-security/pom.xml
+++ b/spring-boot-security/pom.xml
@@ -23,6 +23,9 @@
   
   <modules>
 		<module>spring-boot-security-basic</module>
+		<module>spring-boot-security-digest</module>
+		<module>spring-boot-security-jdbc</module>
+		<module>spring-boot-security-jpa</module>
 		
 	</modules>
   
