--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<module>spring-boot-session-hazelcast</module>
 		<module>spring-boot-cache-hazelcast</module>
 		<module>spring-boot-security</module>
+		<!--<module>spring-boot-grpc-example</module> -->
 	</modules>
 
 </project>
