--- a/spring-boot-microservices/pom.xml
+++ b/spring-boot-microservices/pom.xml
@@ -2,11 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.tutorialsdesk</groupId>
-  <artifactId>spring-boot-security</artifactId>
+  <artifactId>spring-boot-microservices</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>spring-boot-security</name>
-  <description>spring-boot-security</description>
+  <name>spring-boot-microservices</name>
+  <description>spring-boot-microservices</description>
   
     <parent>
     <groupId>org.springframework.boot</groupId>
@@ -22,13 +22,10 @@
 	</properties>
   
   <modules>
-		<module>spring-boot-security-basic</module>
-		<module>spring-boot-security-digest</module>
-		<module>spring-boot-security-jdbc</module>
-		<module>spring-boot-security-jpa</module>
-		<module>spring-boot-security-oauth2</module>
-		<module>spring-boot-security-sso-okta</module>
-		
+		<module>spring-boot-service-discovery-eureka</module>
+		<module>spring-boot-service-discovery-eureka-client</module>
+		<module>spring-boot-service-discovery-consul-client</module>
+		<module>spring-boot-service-discovery-consul-client-2</module>
 	</modules>
   
 </project>
