--- a/spring-boot-microservices/spring-boot-service-discovery-consul-client-2/src/main/resources/application.properties
+++ b/spring-boot-microservices/spring-boot-service-discovery-consul-client-2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.application.name= consul-client-service-call
+spring.application.name= service-2
 management.security.enabled=false
 management.health.consul.enabled=false
 
