--- a/spring-boot-microservices/spring-boot-service-discovery-consul-client/src/main/resources/application.properties
+++ b/spring-boot-microservices/spring-boot-service-discovery-consul-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8081
 
-spring.application.name= consul-client-service
+spring.application.name= service-1
 management.security.enabled=false
 management.health.consul.enabled=false
 
