--- a/spring-boot-microservices/spring-boot-service-discovery-eureka-client-2/pom.xml
+++ b/spring-boot-microservices/spring-boot-service-discovery-eureka-client-2/pom.xml
@@ -1,15 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.tutorialsdesk</groupId>
-	<artifactId>spring-boot-service-discovery-eureka-client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-service-discovery-eureka-client</name>
-	<description>spring-boot-service-discovery-eureka-client</description>
-	
-	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.tutorialsdesk</groupId>
+  <artifactId>spring-boot-service-discovery-eureka-client-2</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>spring-boot-service-discovery-eureka-client-2</name>
+  <description>spring-boot-service-discovery-eureka-client-2</description>
+<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.13.RELEASE</version>
