--- a/spring-boot-microservices/spring-boot-service-discovery-eureka-client/src/main/resources/application.properties
+++ b/spring-boot-microservices/spring-boot-service-discovery-eureka-client/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
+server.port=8081
+
 spring.main.banner-mode=OFF
 
-spring.application.name=eureka-client
+spring.application.name=service-1
 
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
