--- a/spring-boot-camel/spring-boot-camel-route/pom.xml
+++ b/spring-boot-camel/spring-boot-camel-route/pom.xml
@@ -34,6 +34,17 @@
 			<!-- use the same version as your Camel core version -->
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-jetty -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jetty</artifactId>
+			<version>${camel.version}</version>
+			
+		</dependency>
+
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
