--- a/spring-boot-rest/spring-boot-spring/pom.xml
+++ b/spring-boot-rest/spring-boot-spring/pom.xml
@@ -22,7 +22,8 @@
 	</properties>
   
   <modules>
-		<module>spring-boot-rest-example</module>		
+		<module>spring-boot-rest-example</module>	
+		<module>spring-boot-rest-client</module>		
 	</modules>
   
 </project>
