--- a/spring-boot-rest/spring-boot-spring/pom.xml
+++ b/spring-boot-rest/spring-boot-spring/pom.xml
@@ -23,7 +23,8 @@
   
   <modules>
 		<module>spring-boot-rest-example</module>	
-		<module>spring-boot-rest-client</module>		
+		<module>spring-boot-rest-client</module>
+		<module>spring-boot-rest-hateoas</module>
 	</modules>
   
 </project>
