--- a/spring-boot-rest/spring-boot-spring/.recommenders/caches/identified-project-coordinates.json
+++ b/spring-boot-rest/spring-boot-spring/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\repo\\spring-boot-examples\\spring-boot-rest\\spring-boot-spring\\spring-boot-rest-example","type":"PROJECT","hints":{"PROJECT_NAME":"spring-boot-rest-example"}},"com.tutorialsdesk:spring-boot-rest-example:0.0.1"],[{"location":"C:\\Users\\phsharma\\.m2\\repository\\org\\springframework\\spring-web\\4.3.17.RELEASE\\spring-web-4.3.17.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_131","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
